# ObsidianBot

./: BotCoreManager.py  README.md  know.txt  main.py  pyproject.toml
jsons/: eji.json  linux_knowledge.json  rand_sentence.json  shit.json  su.json  update_log.json  version.json
modules/: bot-version.py  eji.py  esu.py  fudu.py  getup.py  linux.py  menu.py  overview.py  println.py  random_photo.py  shit.py  sourcecode.py  special_thanks.py  take_menu.py  unix.py  update_log.py  version.py
yamls/: eji.yaml  global.yaml  linux_knowledge.yaml  menu.yaml  rand_sentence.yaml  settings.yaml  shit.yaml  unix_knowledge.yaml  update_log.yaml  urls.yaml  version.yaml
